# Resilix

./: .dockerignore  .gitignore  Dockerfile  PROJECT_STORY.md  README.md  cloudbuild.yaml  pyproject.toml  techspec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EvidenceSection.tsx  IncidentDetail.tsx  IncidentFeed.tsx  RemediationSection.tsx  SystemHealthStrip.tsx  Timeline.tsx
frontend/src/lib/: api.ts  format.ts  mapper.ts  version.ts
frontend/src/types/: api.ts  ui.ts
scripts/: smoke_frontend_backend.sh
simulator/: README.md  RECORDING_CHECKLIST.md  RUNBOOK.md
simulator/fixtures/alerts/: backlog_high.json  dns_config_error.json
simulator/generators/: __init__.py  logs.py  payloads.py  timeline.py
simulator/scenarios/: __init__.py  registry.py
simulator/scripts/: common.py  run_deployed_demo.py  run_dns_demo.py  run_scenario.py  trigger_alert.py  trigger_dns_incident.py  verify_external_side_effects.py  verify_lifecycle.py
src/resilix/: __init__.py  agent.py  main.py  run_adk.py
src/resilix/agents/: __init__.py  adk_shim.py  administrator.py  mechanic.py  orchestrator.py  sentinel.py  sherlock.py  utils.py
tests/: conftest.py
tests/test_acceptance/: test_phase4_agent_logic.py
tests/test_agents/: test_mechanic_handoff.py  test_sherlock_handoff.py
tests/test_api/: test_approve_merge.py  test_health.py  test_incidents.py  test_static_cache.py  test_webhook.py
tests/test_cli/: test_run_adk.py
tests/test_config/: test_settings_mock_flag.py
tests/test_contract/: test_incident_schema_snapshots.py
tests/test_e2e/: test_incident_lifecycle.py
tests/test_models/: test_alert.py
tests/test_services/: test_admin_service.py  test_incident_mapper.py  test_integration_executor.py  test_integration_providers.py  test_orchestrator_adk_runner.py  test_orchestrator_jira_transitions.py  test_pr_merge_policy.py  test_sentinel_service.py  test_session_postgres_store.py  test_session_startup_fallback.py
tests/test_simulator/: test_generators_determinism.py  test_run_deployed_demo.py  test_scenario_registry_contract.py  test_script_payload_stamping.py  test_verify_external_side_effects.py
tests/test_tools/: test_validation.py
(+33 files in other folders)
