[project]
name = "resilix"
version = "1.0.0"
description = "Resilix - The Autonomous Site Reliability Engineer powered by Gemini 3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Resilix Team" }
]
keywords = ["sre", "agents", "gemini", "adk", "mcp", "autonomous"]

dependencies = [
    # Google ADK and Gemini
    "google-adk>=0.1.0",
    "google-genai>=0.5.0",
    
    # MCP Protocol
    "mcp>=1.0.0",
    "mcp-atlassian>=0.1.0",
    
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    
    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client
    "httpx>=0.27.0",
    
    # Database & Caching
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    
    # Environment & Config
    "python-dotenv>=1.0.0",
    
    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

demo = [
    "flask>=3.0.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
resilix = "resilix.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resilix"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["resilix"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=resilix --cov-report=term-missing"
